(lang dune 3.6)

(name clearooms_app)

(generate_opam_files true)

(source
 (github georgejkaye/clearooms-app))

(authors "George Kaye")

(maintainers "George Kaye")

(license GPL-3.0-or-later)

(documentation https://url/to/documentation)

(package
 (name clearooms_app)
 (synopsis "App for interacting with Clearooms`")
 (description
  "Application for performing common operations with Clearooms, such as checking in or booking rooms")
 (depends ocaml dune)
 (tags ()))
